Allow creating groups from the UI

--- a/docs/progress/2020-12-26.md
+++ b/docs/progress/2020-12-26.md
@@ -24,3 +24,30 @@ Also, I feel like I'm at the stage where I'm starting to lose motivation and
 wanting to work on something else. Although, bad planning is probably the cause
 of this. I don't know what to do because I didn't plan far enough ahead. My
 design document was also rather crude and informal.
+
+Now that I've gotten that out of the way, I can talk about the actual features
+that I implemented today.
+
+---
+
+I'm thinking that there should be a UI element that has a list of all groups
+that a user is a member of, as well as a button for creating a new group.
+
+I created an API endpoint for creating groups. The endpoint takes a group name
+and image URL, then returns the group ID and channel ID, or an error. Now I need
+to figure out how the client is going to invoke this.
+
+I'll create the UI element for a list of groups, with the button for creating
+a new group. The button will show a dialog box. This will be quite similar to
+the code for creating a new channel except that the channel is created using the
+socket connection, whereas creating a group is done via a separate endpoint.
+
+I still haven't dealt with the duplication between the three dialog boxes!
+
+Taking notes of my progress seems to help me stay focused. I've already said
+this but I regret not starting this earlier. There's another thing I've learnt,
+writing down my progress helps me to make progress.
+
+At this stage, group creation seems to be close to complete. What I'm yet to
+work out is how to efficiently navigate to the new group. Currently, the page
+reloads but I don't think it should.
