Update time representation every minute

--- a/docs/progress/2020-12-27.md
+++ b/docs/progress/2020-12-27.md
@@ -45,3 +45,8 @@ each message would have its own setTimeout to update when it needs to. I've
 changed it so that there's one centralized data structure that keeps track of
 all messages that need their time representation changed. Then there's one
 function for updating them all.
+
+An issue I'm having is that the setTimeout is essentially paused while a laptop
+has its lid closed. The only solution I've found for dealing with this is to
+check the time more often. That feels rather unsatisfying. I'll check the
+current time every minute instead of every day.
