--- a/docs/progress/2020-12-29.md
+++ b/docs/progress/2020-12-29.md
@@ -34,12 +34,17 @@ in the document but they aren't being preloaded. I generated link elements to
 preload the images and that resulted further performance improvements.
 
 I've also been putting off dealing with the UI. I need to work out where to put
-things and sort all of that out. I think bootstrap might be holding me back
-because I keep trying to use bootstrap for as much as possible. Then in a
-situation where I can't use bootstrap, I just don't style that part. Not having
+things and sort all of that out. I think Bootstrap might be holding me back
+because I keep trying to use Bootstrap for as much as possible. Then in a
+situation where I can't use Bootstrap, I just don't style that part. Not having
 the UI polished is also making it difficult to add features because most
 features end up requiring UI. It's the sort of task that probably has the
 biggest payoff.
 
-I think I'll do all the CSS without bootstrap, then once I'm done, I'll drop in
+I think I'll do all the CSS without Bootstrap, then once I'm done, I'll drop in
 bootstrap where applicable.
+
+Bootstrap is meant to be a starting point, not the finished product. You can
+look to Bootstrap for inspiration and then create something based on it. I'm
+beginning to think that perhaps I shouldn't use Bootstrap at all. What's more
+likely is that I end up using very little of it.
