--- a/docs/progress/2021-01-03.md
+++ b/docs/progress/2021-01-03.md
@@ -20,7 +20,7 @@ ultimately, the complexity is still there.
 
 I feel like I've done enough refactoring today. I want to implement features!
 
-The next logical step seems to be drop-down menus. Lack of drop-down menus is a 
+The next logical step seems to be dropdown menus. Lack of dropdown menus is a 
 blocker for many features. I'll start simple. I'll show a better looking tooltip
 over the group icons to show group names.
 
@@ -28,6 +28,6 @@ I decided to use Popper directly instead of using Bootstrap. This makes it
 easier to customize and also allows me to make the JavaScript footprint as small
 as possible.
 
-I created the drop-down menu that appears under the group title and I'm pretty
+I created the dropdown menu that appears under the group title and I'm pretty
 happy with it. It has five buttons but only two are functional at the moment.
 With this in place I can start implementing more features.
