--- a/docs/progress/2020-11-17.md
+++ b/docs/progress/2020-11-17.md
@@ -13,4 +13,6 @@ Should develop it in stages.
 4. At some point, extend the feature set. Maybe an API for chat bots.
 5. Maybe I could also make an iOS app to learn more about iOS development.
 
-After I’ve written about the end product in as much detail as possible, divide it into stages and estimate a timeline. It should be easy to tell my progress. I should be able to mark things off a checklist.
+After I’ve written about the end product in as much detail as possible, divide
+it into stages and estimate a timeline. It should be easy to tell my progress. I
+should be able to mark things off a checklist.
