--- a/docs/progress/2021-01-08.md
+++ b/docs/progress/2021-01-08.md
@@ -39,3 +39,15 @@ Perhaps there's no need to notify all members when a group is renamed or
 deleted. Maybe we could just update the group list whenever the user changes
 groups. If they click on a deleted group, just take them to some other group.
 That's another simplification...
+
+I'm sort of in an uncanny valley of complexity. This isn't quite complex enough
+to solve all of the problems that a real product would need to solve, yet I'm
+still trying to keep it simple. It's just a little too close to the complex
+side. I should sacrifice features in order to save time and then take note of
+what I did.
+
+You never complete software, you just give up on it. The finished product is a
+moving target that you can never reach. The more I work on this project, the
+less motivation I have to complete it. I hate leaving things unfinished. I would
+like to leave this project in a somewhat complete state before I move on to
+something else.
