Update notes and report

--- a/docs/progress/2021-01-09.md
+++ b/docs/progress/2021-01-09.md
@@ -14,9 +14,9 @@ I'll probably do that. I've learnt so much on this project but now it's getting
 to the point where the rate of learning has decreased and I'm working through
 tedious tasks.
 
-I was to start this project over, I would definitely do things differently which
-shows that I've learnt from it. I'd rather start something new than rewrite
-this.
+If I was to start this project over, I would definitely do things differently
+which shows that I've learnt from it. I'd rather start something new than
+rewrite this.
 
 About leaving groups, I've finally decided that I want to anonymize messages
 when users leave.
